--- a/style.css
+++ b/style.css
@@ -1,7 +1,25 @@
+body, html {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: #dddddd;
 }
 
-#canvas-container {
-    text-align: center;
+.fullscreen {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.fullscreen > * {
+    width: 100%;
+    height: 100%;
+}
+
+.overlay {
+    position: fixed;
+    left: 20px;
+    top: 20px;
 }
