--- a/style.css
+++ b/style.css
@@ -25,13 +25,13 @@ body {
 }
 
 /* IE10 */
-.water {color: blue;}
-.flowers {color: green;}
+#water {color: blue;}
+#flowers {color: green;}
 
 /* Firefox */
-.water::-moz-progress-bar {background: blue;}
-.flowers::-moz-progress-bar {background: green;}
+#water::-moz-progress-bar {background: blue;}
+#flowers::-moz-progress-bar {background: green;}
 
 /* Chrome */
-.water::-webkit-progress-value {background: blue;}
-.flowers::-webkit-progress-value {background: green;}
+#water::-webkit-progress-value {background: blue;}
+#flowers::-webkit-progress-value {background: green;}
